crates/dsl-core/tests/snapshots/ast_golden__ast_screening_refresh.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "screening",
                verb: "refresh",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 30,
                                end: 37,
                            },
                        },
                        span: Span {
                            start: 19,
                            end: 37,
                        },
                    },
                    Argument {
                        key: "force",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 45,
                                end: 49,
                            },
                        ),
                        span: Span {
                            start: 38,
                            end: 49,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 50,
                },
            },
        ),
    ],
}
