crates/dsl-core/tests/snapshots/ast_golden__ast_screening_sanctions.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "screening",
                verb: "sanctions",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 32,
                                end: 39,
                            },
                        },
                        span: Span {
                            start: 21,
                            end: 39,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 40,
                },
            },
        ),
    ],
}
