crates/dsl-core/tests/snapshots/ast_golden__ast_session_info.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "session",
                verb: "info",
                arguments: [],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
}
