crates/dsl-core/tests/snapshots/ast_golden__ast_session_start.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "session",
                verb: "start",
                arguments: [
                    Argument {
                        key: "mode",
                        value: Literal(
                            String(
                                "new",
                            ),
                            Span {
                                start: 21,
                                end: 26,
                            },
                        ),
                        span: Span {
                            start: 15,
                            end: 26,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 27,
                },
            },
        ),
    ],
}
