crates/dsl-core/tests/snapshots/ast_golden__ast_view_cbu.snap
---
source: crates/dsl-core/tests/ast_golden.rs
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "view",
                verb: "cbu",
                arguments: [
                    Argument {
                        key: "mode",
                        value: Literal(
                            String(
                                "ubo",
                            ),
                            Span {
                                start: 16,
                                end: 21,
                            },
                        ),
                        span: Span {
                            start: 10,
                            end: 21,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 0,
                    end: 22,
                },
            },
        ),
    ],
}
